--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "convex": "^1.26.2",
     "motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
